dnl Process this file with autoconf to produce a configure script.
AC_INIT(bpalogin.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strcspn strerror)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, connect)

AC_PATH_PROG(CHKCONFIG, chkconfig, , $PATH:/sbin:/usr/sbin:/usr/local/sbin)
AC_PATH_PROG(SED, sed, , $PATH:/sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin)
AC_OUTPUT(Makefile)
